--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sefailyasoz/react-carousel": "^1.1.1",
     "@tailwindcss/vite": "^4.1.10",
     "lucide-react": "^0.517.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "react-slick": "^0.30.3",
     "ri": "^0.0.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
